--- a/gpt_example.ipynb
+++ b/gpt_example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "gpt_example.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPY1TQIBs3YpEhP9/745sHc",
+      "authorship_tag": "ABX9TyN7sJThbZAzCsnTgHqlKo3c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1982,15 +1982,16 @@
         "id": "mjWRDWoxrVWz"
       },
       "source": [
-        "sentence = \"Chess\"\n",
-        "# sentence = \"What is affirmative action\"\n",
-        "# sentence = \"Effect of drought on corn in the United States\"\n",
-        "# sentence = \"GoogleFi's phone plans are not worth the money\"\n",
+        "sentence = \"Chess\" # basic topic\n",
+        "# sentence = \"What is affirmative action\" # definition\n",
+        "# sentence = \"Facebook is better than Instagram\" # comparative\n",
+        "# sentence = \"Effect of drought on corn in the United States\" # niche knowledge\n",
+        "# sentence = \"GoogleFi's phone plans are not worth the money\" # niche opinion\n",
         "\n",
         "# we convert/encode the sentence into input_ids which uses PyTorch tensors\n",
         "input_ids = tokenizer.encode(sentence, return_tensors='pt')"
       ],
-      "execution_count": 16,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -2002,7 +2003,7 @@
         "# this uses the GPT2 trained model to create writing based on the sentence with length shorter than max_length, using num_beams to search for relevant words, and limiting the repeats of the same sequence\n",
         "output = model.generate(input_ids, max_length = 200, num_beams=5, no_repeat_ngram_size=2, early_stopping=True)"
       ],
-      "execution_count": 17,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -2010,16 +2011,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 70
+          "height": 88
         },
         "id": "RqK3eVoIsWFO",
-        "outputId": "4d6055fa-6672-4d96-f924-fa250f131856"
+        "outputId": "1c390fd6-2dac-4df1-e7e2-5a5f99bb2354"
       },
       "source": [
         "# decodes the output from numbers to words and skips \\n\n",
         "tokenizer.decode(output[0], skip_special_tokens=True)"
       ],
-      "execution_count": 18,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2028,11 +2029,11 @@
               "type": "string"
             },
             "text/plain": [
-              "'Chess is a game that has been played by humans for thousands of years. It is the most popular game in the world, and is played in over 100 countries around the globe.\\n\\nIn this article, we are going to learn how to play chess. We will start with the basics of the game and then move on to the more advanced aspects of chess, such as strategy and tactics. In the end, you will be able to take your chess skills to a whole new level.'"
+              "'Facebook is better than Instagram, Twitter, and Facebook Messenger.\\n\\nFacebook Messenger is the best way to communicate with your friends and family. It\\'s easy to use, it\\'s free, you can send and receive text messages, photos, videos and more. You can also use it to share photos and videos with people you don\\'t know, or to find out what\\'s going on in other people\\'s lives. If you want to send a message to a friend or family member, just open the Messenger app on your phone and type in the name of the person you\\'re talking to. Then, tap the \"Send\" button. Your message will be sent to that person\\'s Facebook account, which will then be able to see and respond to your message.'"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 24
         }
       ]
     }
